<resources>

    <string name="app_name">MiniShark</string>
    <string name="fps">0.0 FPS</string>
    <string name="wifisearch">Search for weak networks!</string>
    <string name="attack_end">Done!</string>
    <string name="connect_title">Not connected</string>
    <string name="getKey">Get the password key</string>
    <string name="credits">Credits</string>
    <string name="choose_device">Choose a network interface</string>
    <string name="yes">Of course!</string>
    <string name="no">No!</string>
    <string name="not_connected_message">You are not connected to any WiFi network. Would you like to connect to one?</string>
    <string name="connect">Connect</string>
    <string name="disconnected_toast">WiFi is disabled... making it enabled</string>
    <string name="no_wifi_connected_toast">WiFi is disconnected. Please, connect to a network</string>
    <string name="notification_sniffing">MiniShark is sniffing packets</string>
    <string name="notification_stop">Stop sniffing</string>
    <string name="notification_sniffing_title">MiniShark is running</string>
    <string name="tcpdump_stopped">Stopping tcpdump...</string>
    <string name="restart_capture">Restart capture</string>
    <string name="settings">Settings</string>
    <string name="credit">Credits</string>
    <string name="analyzer">Analyzer</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="start_capture">Start capture!</string>
    <string name="manual_flags">Manual flags</string>
    <string name="_10">10</string>
    <string name="run_until">Run until...</string>
    <string name="captured_pcap">captured.pcap</string>
    <string name="save_in_file">Save in file</string>
    <string name="credits_string">Credits</string>
    <string name="button">Button</string>
    <string name="analyzer_button">Analyzer</string>
    <string name="capture">Capture</string>

</resources>
